feat: migrate business entities to technical ids
Replace composite persistence identities with generated technical IDs, preserve explicit legacy compatibility, reject ambiguous matches, and update payment, security, photo, and deployment behavior.